--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,15 @@ body {
 .btn {
   font-size: 16px;
   border: 2px solid #000000;
+  margin-bottom: 50px;
 }
 
 .weatherText {
   font-weight: bold;
+}
+
+.contentText {
+  max-width: 350px;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
